@@ -1,3 +1,12 @@
+2019-06-12  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* string/str-two-way.h (two_way_short_needle): Add inline to avoid
+	warning.
+	(two_way_long_needle): Block inlining.
+	* string/strstr.c (strstr2): Add new function.
+	(strstr3): Likewise.
+	(STRSTR): Completely rewrite strstr to improve performance.
+
 2019-06-11  Wilco Dijkstra  <wdijkstr@arm.com>
 
 	* benchtests/bench-strstr.c (test_hard_needle): New function.
